--- a/test.spec.in
+++ b/test.spec.in
@@ -1,2 +1,2 @@
 {alias, erlotr, "@PATH@/lib/erlotr"}.
-{suites, erlotr, [otr_message_SUITE, otr_crypto_SUITE]}.
+{suites, erlotr, [otr_message_SUITE, otr_crypto_SUITE, otr_parser_fsm_SUITE]}.
