add library module for TLV encoding/decoding

--- a/test.spec.in
+++ b/test.spec.in
@@ -1,3 +1,3 @@
 {alias, erlotr, "@PATH@/lib/erlotr"}.
 {suites, erlotr, [otr_message_SUITE, otr_crypto_SUITE, otr_parser_fsm_SUITE,
-	              otr_ake_fsm_SUITE, otr_fsm_SUITE]}.
+	              otr_ake_fsm_SUITE, otr_fsm_SUITE, otr_tlv_SUITE]}.
