--- a/lib/erlotr/Makefile
+++ b/lib/erlotr/Makefile
@@ -22,9 +22,11 @@ clean:
 
 ct_test: build
 	mkdir -p ${TEST_LOGDIR}
-	erl -sname unit-test -spec test/erlotr.spec \
+	ERL_LIBS="$${ERL_LIBS}:`pwd`/.." \
+	 erl -sname unit-test -spec test/erlotr.spec \
 	-logdir ${TEST_LOGDIR} \
 	-cover test/erlotr.cover \
+	-s crypto_aux start \
 	-s ct_run script_start \
 	-s erlang halt
 
